--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Jin Zeng"
-  avatar           : "profile.jpg"
+  avatar           : "profile_jin.jpg"
   bio              : "Assistant Professor, Tongji University"
   location         : "Shanghai, China"
   employer         :
