--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Your Name / Site Title"
+title                    : "Jin Zeng (曾进)"
 title_separator          : "-"
 name                     : &name "Your Name"
 description              : &description "personal description"
