--- a/_config.yml
+++ b/_config.yml
@@ -7,13 +7,13 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Jin Zeng (曾进)"
+title                    : "Jin Zeng"
 title_separator          : "-"
 name                     : &name "Jin Zeng"
 description              : &description "personal description"
 url                      : https://jzengust.github.io #https://jzengust.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "jzengust.github.io"
+repository               : "jzengust/jzengust.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
