--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,8 @@ analytics:
 author:
   name             : "Jin Zeng"
   avatar           : "profile_jin.png"
-  bio              : "Assistant Professor, Tongji University"
+  bio              : "Assistant Professor
+  Tongji University"
   location         : "Shanghai, China"
   employer         :
   # pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
