--- a/_config.yml
+++ b/_config.yml
@@ -82,8 +82,7 @@ analytics:
 author:
   name             : "Jin Zeng"
   avatar           : "profile_jin.png"
-  bio              : "Assistant Professor"
-  bio              : "Tongji University"  
+  bio              : "Assistant Professor      Tongji University" 
   location         : "Shanghai, China"
   employer         :
   # pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
