--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,7 +3,7 @@ main:
   - title: "Publications and Patents"
     url: /publications/
 
-  - title: "Teaching"
+  - title: "Teaching and Talks"
     url: /teaching/          
   
   - title: "Academic Services"
